# ASAL_Training

./: README.md
.github/workflows/: test-Azure.yml  (+2 more)
Azure/: .env  Task.md  azure_devops_api.py  cli_commands.py  handler.py  pyproject.toml  read_token.py  req_res.py  serverless.yml  sqs.py
Django/Blog/: Task.md  pyproject.toml
Django/Blog/BlogProject/Blog/: admin.py  apps.py  forms.py  middleware.py  models.py  permissions.py  scripts.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
Django/Blog/BlogProject/Blog/migrations/: 0001_initial.py  0002_alter_post_status.py  0003_comment.py  0004_post_source.py  0005_notification_profile_like_subscription.py  0006_rename_profile_useractivity.py  0007_comment_sentiment_label_comment_sentiment_score_and_more.py  0008_badge_userachievement.py  0009_useractivity_last_login_date_and_more.py
Django/Blog/BlogProject/Blog/services/: openai_service.py  services.py
Django/Blog/BlogProject/Blog/static/css/: styles.css
Django/Blog/BlogProject/Blog/static/js/: blog-scripts.js
Django/Blog/BlogProject/Blog/templates/blog/: add_post.html  author_list.html  base.html  detail_of_post.html  edit_post.html  leaderboard.html  post.html  welcome.html
Django/Blog/BlogProject/Blog/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  register_done.html
Django/Blog/BlogProject/Blog/templatetags/: custom_filters.py
Django/Blog/BlogProject/Blog/utils/: achievement_utils.py  activity_utils.py  utils.py
Django/Blog/BlogProject/Project/: celery.py  settings.py  urls.py
Django/Blog/BlogProject/sentiment-analysis/: handler.py  package-lock.json  package.json  serverless.yml
Django/Blog/BlogProject/utils/: redis_helpers.py
Django/Contracts/: Task.md  pyproject.toml
Django/Contracts/ContractRestAPI/contract/: apps.py  credentials.json  google_sheet.py  models.py  serializers.py  tests.py  urls.py  views.py
Django/Contracts/ContractRestAPI/contract/management/commands/: seed.py
Django/Contracts/ContractRestAPI/contract/migrations/: 0001_initial.py  0002_alter_profile_first_name_alter_profile_last_name_and_more.py  0003_alter_profile_options_alter_profile_managers_and_more.py  0004_remove_contract_client_remove_contract_contractor_and_more.py  0005_initial.py  0006_rename_paid_job_paid_and_more.py  0007_alter_contract_options.py
Django/Contracts/ContractRestAPI/project/: settings.py  urls.py
Django/Polls/: Task.md  pyproject.toml
Django/Polls/djangoProject/myProject/: settings.py  urls.py
Django/Polls/djangoProject/polls/: admin.py  models.py  tests.py  urls.py  views.py
Django/Polls/djangoProject/polls/migrations/: 0001_initial.py
Django/Polls/djangoProject/polls/static/polls/: style.css
Django/Polls/djangoProject/polls/static/polls/images/: back.jfif
HTML/: HTMLElement.py  Task.md  pyproject.toml  test_html.py
