[tool.poetry]
name = "azure"
version = "0.1.0"
description = ""
authors = ["AyaMoeen <ayamoinn95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.6.9"
pytest = "^8.3.3"
mypy = "^1.11.2"
httpx = "^0.27.2"
boto3 = "^1.35.38"
pydantic = "^2.9.2"
click = "^8.1.7"
boto3-stubs = "^1.35.43"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
